更新 项目后台目录结构

--- a/server/App/View/YiDaixi/Admin/index_index.html
+++ b/server/App/View/YiDaixi/Admin/index_index.html
@@ -30,19 +30,45 @@
       <script src="resource/lib/avoscloud-sdk/dist/av.js"></script>
       <script src="resource/lib/angular/angular.js"></script>
       <script src="resource/lib/angular/angular-route.js"></script>
-      <script src="resource/lib/yike/js/model.js"></script>
+      <script src="resource/lib/yike/js/db.js"></script>
 
       <!--script for this page-->
       <script src="resource/js/admin/app.js"></script>
-      <script src="resource/js/admin/home.js"></script>
-      <script src="resource/js/admin/setting.js"></script>
-      <script src="resource/js/admin/ad.js"></script>
-      <script src="resource/js/admin/user.js"></script>
-      <script src="resource/js/admin/address.js"></script>
-      <script src="resource/js/admin/item.js"></script>
-      <script src="resource/js/admin/order.js"></script>
-      <script src="resource/js/admin/pay.js"></script>
-      <script src="resource/js/admin/withdraw.js"></script>
+
+      <script src="resource/js/admin/ad/ad.js"></script>
+      <script src="resource/js/admin/ad/ad.list.js"></script>
+      <script src="resource/js/admin/ad/ad.add.js"></script>
+
+      <script src="resource/js/admin/home/home.js"></script>
+      <script src="resource/js/admin/home/home.list.js"></script>
+
+      <script src="resource/js/admin/setting/setting.js"></script>
+      <script src="resource/js/admin/setting/setting.list.js"></script>
+      <script src="resource/js/admin/setting/setting.add.js"></script>
+
+      <script src="resource/js/admin/user/user.js"></script>
+      <script src="resource/js/admin/user/user.list.js"></script>
+      <script src="resource/js/admin/user/user.add.js"></script>
+
+      <script src="resource/js/admin/address/address.js"></script>
+      <script src="resource/js/admin/address/address.list.js"></script>
+      <script src="resource/js/admin/address/address.add.js"></script>
+
+      <script src="resource/js/admin/item/item.js"></script>
+      <script src="resource/js/admin/item/item.list.js"></script>
+      <script src="resource/js/admin/item/item.add.js"></script>
+
+      <script src="resource/js/admin/order/order.js"></script>
+      <script src="resource/js/admin/order/order.list.js"></script>
+      <script src="resource/js/admin/order/order.add.js"></script>
+
+      <script src="resource/js/admin/pay/pay.js"></script>
+      <script src="resource/js/admin/pay/pay.list.js"></script>
+      <script src="resource/js/admin/pay/pay.add.js"></script>
+
+      <script src="resource/js/admin/withdraw/withdraw.js"></script>
+      <script src="resource/js/admin/withdraw/withdraw.list.js"></script>
+      <script src="resource/js/admin/withdraw/withdraw.add.js"></script>
   </head>
 
   <body>
