新增 产品管理的增删查

--- a/server/App/View/YiDaixi/Admin/index_index.html
+++ b/server/App/View/YiDaixi/Admin/index_index.html
@@ -32,6 +32,9 @@
       <script src="resource/lib/angular/angular-route.js"></script>
       <script src="resource/lib/yike/js/db.js"></script>
 
+      <script src="resource/js/admin/utils/utils.js"></script>
+      <script src="resource/js/admin/utils/utils.upload.js"></script>
+
       <!--script for this page-->
       <script src="resource/js/admin/app.js"></script>
 
