--- a/server/www/resource/views/utils/upload-file.html
+++ b/server/www/resource/views/utils/upload-file.html
@@ -5,7 +5,7 @@
             </button>
     </div>
     <div class="col-lg-3">
-        <a ng-show="item.avatar != ''" href="{{item.avatar}}" target="_blank">[查看图片]</a>
+        <a ng-show="item.image != ''" href="{{item.image}}" target="_blank">[查看图片]</a>
         <img alt="" id="shadowImage"/>
         <input type="file" id="browseBtn" style="display: none;">
     </div>
