--- a/server/www/resource/views/item.html
+++ b/server/www/resource/views/item.html
@@ -8,8 +8,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p>
-                            ID: <input type="text" ng-model="filter.id" style="width: 50px;"/> &nbsp;
-                            <button class="btn btn-success btn-xs" ng-click="search()">查询</button>
+                            ID: <input type="text" ng-model="filter.objectId" style="width: 50px;"/> &nbsp;
+                            <button class="btn btn-success btn-xs" ng-click="query()">查询</button>
 
                             <button class="btn btn-info btn-xs pull-right" ng-click="openModal('#btn-modal-add')">新增产品</button>
                         </p>
