--- a/server/www/resource/views/user.html
+++ b/server/www/resource/views/user.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p>
-                            ID: <input type="text" ng-model="filter.id" style="width: 50px;"/> &nbsp;
+                            ID: <input type="text" ng-model="filter.objectId" style="width: 50px;"/> &nbsp;
                             账号: <input type="text" ng-model="filter.username" style="width: 100px;"/> &nbsp;
                             等级: <select name="" ng-model="filter.status">
                             <option value="">全部</option>
@@ -17,7 +17,7 @@
                         </select> &nbsp;
                             电话: <input type="text" ng-model="filter.phone" style="width: 100px;"/> &nbsp;
                             QQ: <input type="text" ng-model="filter.qq" style="width: 100px;"/> &nbsp;
-                            <button class="btn btn-success btn-xs" ng-click="search()">查询</button>
+                            <button class="btn btn-success btn-xs" ng-click="query()">查询</button>
                         </p>
                     </div>
                 </div>
@@ -26,11 +26,13 @@
                     <tr>
                         <th>ID</th>
                         <th>账号</th>
+                        <th>操作</th>
                     </tr>
                     </thead>
                     <tr ng-repeat="d in data">
                         <td>{{d.id}}</td>
                         <td>{{d.get('username')}}</td>
+                        <td><button class="btn btn-danger btn-xs" ng-click="del(d)">删除</button></td>
                     </tr>
                 </table>
                 <div class="text-center">
