--- a/server/www/resource/views/item.html
+++ b/server/www/resource/views/item.html
@@ -37,9 +37,9 @@
                 </table>
                 <div class="text-center">
                     <ul class="pagination">
-                        <li ng-if="page != 1 && totalPage != 1"><a ng-click="changePage(page-1)" href="javascript:;;;">«</a></li>
+                        <li><a ng-click="changePage(page-1)" href="javascript:;;;">«</a></li>
                         <li ng-repeat="t in totalPage"><a href="javascript:;;;" ng-click="changePage(t)">{{t}}</a></li>
-                        <li ng-if="page != totalPage && totalPage != 1"><a ng-click="changePage(page+1)" href="javascript:;;;">»</a></li>
+                        <li><a ng-click="changePage(page+1)" href="javascript:;;;">»</a></li>
                     </ul>
                 </div>
             </div>
