--- a/www/templates/item-piece.html
+++ b/www/templates/item-piece.html
@@ -14,7 +14,7 @@
                     按袋计价
                 </span>
             </a>
-            <a class="col text-right" ng-click="open('/address')">
+            <a class="col text-right" ng-click="orderCart()">
                 下单
             </a>
         </div>
@@ -79,8 +79,8 @@
 <div class="bar bar-footer bar-balanced" style="margin-bottom: 47px;">
     <div class="row">
         <div class="col">总价:{{money}}元({{piece}}件)</div>
-        <a class="col text-right" ng-click="order()">
-            下单
+        <a class="col text-right" ng-click="orderCart()">
+            确认订单
         </a>
     </div>
 </div>
