更新 下单的时候将订单内容优化了

--- a/www/templates/address.html
+++ b/www/templates/address.html
@@ -1,5 +1,5 @@
 <ion-header-bar class="bar-balanced bar bar-header">
-    <button class="button button-clear" style="font-size: 12px;" ng-click="open('/tab/home')">返回</button>
+    <button class="button button-clear" style="font-size: 12px;" ng-click="open('/order-cart')">返回</button>
     <h1 class="title">选择地址</h1>
     <button class="button button-clear" style="font-size: 12px;" ng-click="open('/address/add')">添加地址</button>
 </ion-header-bar>
