更新 注册功能更新成通过手机号注册

--- a/www/templates/user-reg.html
+++ b/www/templates/user-reg.html
@@ -3,20 +3,25 @@
 </ion-header-bar>
 <ion-view>
     <ion-content class="padding">
-        <div class="list">
-            <label class="item item-input">
-                <input type="text" placeholder="用户名" ng-model="user.username">
-            </label>
-            <label class="item item-input">
-                <input type="password" placeholder="密码" ng-model="user.password">
-            </label>
-            <label class="item item-input">
-                <input type="password" placeholder="确认密码" ng-model="user.rPassword">
-            </label>
-        </div>
-        <button class="button button-balanced button-block" ng-click="reg(user.username, user.password, user.rPassword)">
-            注册
-        </button>
-        <a class="button button-balanced button-block" href="#/user-login">登录</a>
+            <div class="list">
+                <label class="item item-input">
+                    <input type="text" placeholder="手机号码" ng-model="user.username">
+                </label>
+                <label class="item item-input" ng-if="isReg">
+                    <input type="text" placeholder="6位数字验证码" ng-model="user.verify">
+                    <!--<button class="button button-balanced" ng-if="!isSendVerify" ng-click="sendVerfiy()">发送短信</button>-->
+                    <button class="button button-balanced" ng-click="verify()">验证短信</button>
+                </label>
+                <label class="item item-input">
+                    <input type="password" placeholder="密码" ng-model="user.password">
+                </label>
+                <label class="item item-input">
+                    <input type="password" placeholder="确认密码" ng-model="user.rPassword">
+                </label>
+            </div>
+            <button class="button button-balanced button-block" ng-click="reg(user.username, user.password, user.rPassword)">
+                注册
+            </button>
+            <a class="button button-balanced button-block" href="#/user-login">登录</a>
     </ion-content>
 </ion-view>
