--- a/www/templates/user-login.html
+++ b/www/templates/user-login.html
@@ -5,7 +5,7 @@
     <ion-content class="padding">
         <div class="list">
             <label class="item item-input">
-                <input type="text" placeholder="用户名" ng-model="user.username">
+                <input type="text" placeholder="手机号" ng-model="user.username">
             </label>
             <label class="item item-input">
                 <input type="password" placeholder="密码" ng-model="user.password">
