新增 充值功能

--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -14,7 +14,7 @@
               <p>按袋洗衣</p>
               <p class="text-right"><span class="focus2" style="color: #fcb30f">99</span>/袋</p>
           </div>
-          <div class="col" ng-click="open('tab/pay')">
+          <div class="col" ng-click="open('pay')">
               <img src="img/home/ad-icon_07.png" width="60%"/>
               <p>会员充值</p>
               <p>
