--- a/www/templates/pay.html
+++ b/www/templates/pay.html
@@ -1,5 +1,6 @@
 <ion-header-bar class="bar-balanced bar bar-header">
-    <h1 class="title">注册</h1>
+    <button class="button button-clear" style="font-size: 12px;" ng-click="open('tab/home')">返回</button>
+    <h1 class="title">充值</h1>
 </ion-header-bar>
 <ion-view>
     <ion-content>
