更新 清除缓存

--- a/www/templates/item-piece.html
+++ b/www/templates/item-piece.html
@@ -9,7 +9,7 @@
                     按件计价
                 </span>
             </a>
-            <a class="col text-center" ng-click="open('/tab/item/bag')">
+            <a class="col text-center" ng-click="open('tab.item-bag')">
                 <span>
                     按袋计价
                 </span>
