--- a/www/templates/address.html
+++ b/www/templates/address.html
@@ -37,7 +37,7 @@
                 <p>
                     {{d.get('province')}} {{d.get('city')}} {{d.get('area')}} {{d.get('address')}}
                 </p>
-                <p class="text-right"><span>编辑</span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="error">删除</span></p>
+                <!--<p class="text-right"><span>编辑</span>&nbsp;&nbsp;&nbsp;&nbsp;<span class="error">删除</span></p>-->
             </li>
         </ul>
     </ion-content>
