新增 绑定实体卡

--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -36,7 +36,7 @@
             <div class="col col-10"></div>
         </div>
         <div class="list">
-            <a class="item item-icon-left item-icon-right" href="#">
+            <a class="item item-icon-left item-icon-right" href="#" ng-click="bindCard()">
                 <i class="icon ion-card"></i>
                 绑定实体卡
                 <i class="icon ion-ios-arrow-forward"></i>
@@ -48,13 +48,13 @@
                 <i class="icon ion-ios-arrow-forward"></i>
             </a>
 
-            <a class="item item-icon-left item-icon-right" href="#">
+            <a class="item item-icon-left item-icon-right" href="#" style="display: none;">
                 <i class="icon ion-android-menu"></i>
                 更多
                 <i class="icon ion-ios-arrow-forward"></i>
             </a>
 
-            <a class="item item-icon-left item-icon-right" href="#">
+            <a class="item item-icon-left item-icon-right" href="#" ng-click="love()">
                 <i class="icon ion-android-favorite-outline"></i>
                 爱心捐赠
                 <i class="icon ion-ios-arrow-forward"></i>
