--- a/www/templates/tab-user.html
+++ b/www/templates/tab-user.html
@@ -42,7 +42,7 @@
                 <i class="icon ion-ios-arrow-forward"></i>
             </a>
 
-            <a class="item item-icon-left item-icon-right" href="#">
+            <a class="item item-icon-left item-icon-right" href="#/address/edit/list">
                 <i class="icon ion-ios-location-outline"></i>
                 常用地址
                 <i class="icon ion-ios-arrow-forward"></i>
