更新 隐藏管理后台的一些数据

--- a/server/App/View/YiDaixi/Admin/index_index.html
+++ b/server/App/View/YiDaixi/Admin/index_index.html
@@ -121,19 +121,19 @@
                       </a>
                   </li>
 
-                  <li>
-                      <a href="/admin#setting">
-                          <i class="icon-laptop"></i>
-                          <span>系统设置</span>
-                      </a>
-                  </li>
+                  <!--<li>-->
+                      <!--<a href="/admin#setting">-->
+                          <!--<i class="icon-laptop"></i>-->
+                          <!--<span>系统设置</span>-->
+                      <!--</a>-->
+                  <!--</li>-->
 
-                  <li>
-                      <a href="/admin#ad">
-                          <i class="icon-laptop"></i>
-                          <span>广告设置</span>
-                      </a>
-                  </li>
+                  <!--<li>-->
+                      <!--<a href="/admin#ad">-->
+                          <!--<i class="icon-laptop"></i>-->
+                          <!--<span>广告设置</span>-->
+                      <!--</a>-->
+                  <!--</li>-->
 
                   <li>
                       <a href="/admin#user">
@@ -170,12 +170,12 @@
                       </a>
                   </li>
 
-                  <li>
-                      <a href="/admin#withdraw">
-                          <i class="icon-laptop"></i>
-                          <span>提现管理</span>
-                      </a>
-                  </li>
+                  <!--<li>-->
+                      <!--<a href="/admin#withdraw">-->
+                          <!--<i class="icon-laptop"></i>-->
+                          <!--<span>提现管理</span>-->
+                      <!--</a>-->
+                  <!--</li>-->
                   <!--multi level menu end-->
 
               </ul>
