--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -33,17 +33,17 @@
           <ion-slide-box>
               <ion-slide>
                   <div class="box">
-                      <img src="img/home/home-banner1.jpg" alt="" width="100%"/>
+                      <img src="img/home/home-banner1.jpg" alt="" width="100%" height="200"/>
                   </div>
               </ion-slide>
               <ion-slide>
                   <div class="box">
-                      <img src="img/home/home-banner1.jpg" alt="" width="100%"/>
+                      <img src="img/home/home-banner1.jpg" alt="" width="100%" height="200"/>
                   </div>
               </ion-slide>
               <ion-slide>
                   <div class="box">
-                      <img src="img/home/home-banner1.jpg" alt="" width="100%"/>
+                      <img src="img/home/home-banner1.jpg" alt="" width="100%" height="200"/>
                   </div>
               </ion-slide>
           </ion-slide-box>
