--- a/server/App/View/YiDaixi/Admin/index_index.html
+++ b/server/App/View/YiDaixi/Admin/index_index.html
@@ -52,6 +52,7 @@
       <script src="resource/js/admin/user/user.js"></script>
       <script src="resource/js/admin/user/user.list.js"></script>
       <script src="resource/js/admin/user/user.add.js"></script>
+      <script src="resource/js/admin/user/user.login.js"></script>
 
       <script src="resource/js/admin/address/address.js"></script>
       <script src="resource/js/admin/address/address.list.js"></script>
